--- a/.github/workflows/ci-dotnet.yml
+++ b/.github/workflows/ci-dotnet.yml
@@ -2,7 +2,12 @@ name: ci-dotnet
 
 on:
   - workflow_dispatch
-  - pull_request
+  - push:
+      branches:
+        - master
+  - pull_request:
+      branches:
+        - master
 
 jobs:
   build_windows:
@@ -61,7 +66,7 @@ jobs:
           path: ./out/android/*
 
   package_nuget:
-    runs-on: windows-latest
+    runs-on: macos-latest
     needs: [ build_windows, build_macos, build_linux, build_android, build_ios ]
     steps:
       - uses: actions/checkout@v1
@@ -75,6 +80,7 @@ jobs:
           [xml]$projectFile = Get-Content ./wrappers/dotnet/Directory.Build.props
           $projectFile.Project.PropertyGroup[0].Version = $packageVersion
           $projectFile.Save("./wrappers/dotnet/Directory.Build.props")
+        shell: pwsh
 
       - uses: microsoft/setup-msbuild@v1.0.2
       - run: msbuild /t:restore,build /p:Configuration=Release ./wrappers/dotnet/
@@ -85,5 +91,5 @@ jobs:
         with:
           name: package-nuget
           path: |
-            ./wrappers/dotnet/**/*.nupkg
-            ./wrappers/dotnet/**/*.snupkg
+            ./wrappers/dotnet/src/BbsSignatures/bin/Release/*.nupkg
+            ./wrappers/dotnet/src/BbsSignatures/bin/Release/*.snupkg
